# prism

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
prism/: __init__.py  dataset.py  features.py  plots.py
prism/modeling/: predict.py  train.py
