[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prism"
version = "0.0.1"
description = "A project exploring ITSM data to uncover actionable insights, improve service efficiency, and drive value through data-driven analytics and innovative methodologies."
authors = [
  { name = "Andreas Licht" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["prism"]
force_sort_within_sections = true
